--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DC'
 - !lcsh 'France -- History -- 1789-1900'
+- GITenberg
 title: France in the Nineteenth Century
 url: http://www.gutenberg.org/ebooks/14194
